dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-api-server
  labels:
    app: report-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-api-server
  template:
    metadata:
      labels:
        app: report-api-server
    spec:
      imagePullSecrets:
        - name: facegram-registery
      containers:
        - name: report-api-server
          image: cr.fcgm.dev/facegram/report-service:be16eede
          ports:
            - containerPort: 8080
            - containerPort: 30020
