dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-api-service
spec:
  selector:
    app: report-api-server
  ports:
    - name: http-api
      protocol: TCP
      port: 31510
      targetPort: 8080
      nodePort: 31510
    - name: grpc-manager-port
      protocol: TCP
      port: 30020
      targetPort: 30020
      nodePort: 30020       
  type: NodePort
